Fixed the overlapping pin icon in the Command Pallete / Slash Commands #13

--- a/obsidian.css
+++ b/obsidian.css
@@ -2,7 +2,7 @@
     Prism Theme for Obsidian.md
     > An Elegant Light/Dark Theme for Obsidian.md
 
-    Version: v1.0.0
+    Version: v1.1.0
 
     Source: https://github.com/damiankorcz/Obsidian-Prism
     Distributed under the MIT License. See https://github.com/damiankorcz/Obsidian-Prism/blob/main/LICENSE for more information.
@@ -6625,9 +6625,10 @@ community:
         line-height: 28px;
     }
 
-    div.suggestion-item {
-        padding-left: 10px;
+    .modal-container .prompt-results .suggestion-item {
+        margin-right: 8px;
     }
+
 
 /*  ==========================================================================
     Text Selection
